overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@
     font-family: font2;
     src: url(../public/fonts/Lausanne-500.woff2);
 }
+
+
+body{
+    overflow-x:hidden;
+}
